Fixed background image, major stylistic changes.
Added url for background image. Changed it to cover the whole screen.
Gave background colors to all containers.
General positional changes to allow for different window sizes.
Added comments about our 5 rules and required classifications.

--- a/css/style2.css
+++ b/css/style2.css
@@ -6,6 +6,7 @@ use , to separate a list of things that have some shared css rule
 use float to make something locate itself on the right or left
 */
 
+/*Rule3: We changed the background of the site to an image instead. We changed the image properties so that it was one whole image for the page.*/
 body{
     padding: 30px;
     background-color: #2c8b97;
@@ -13,20 +14,15 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image:url(
-    ///home/burge337/Pictures/pngtree-cartoon-ocean-underwater-world-image_166588.jpg
-    )
-    
-}
+    /*Background Photos from  <a href="https://pngtree.com/free-backgrounds">pngtree.com</a>*/
+    background-image: url("https://png.pngtree.com/thumb_back/fw800/back_our/20190620/ourmid/pngtree-cartoon-ocean-underwater-world-image_166588.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
 
-@media screen and (min-width: 925px) {
-  .pslo-courses-container {
-    display: flex;
-    flex-direction: column;
-    max-width: 53em;
-  }
-}
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 1850px) {
+    /*Rule2: We adjusted this class so that our useful links container would remain at a fixed position on the screen while scrolling.*/
     .link-container {
         display: flex;
         flex-direction: row;
@@ -35,25 +31,50 @@ body{
         position: fixed;
         right: 0;
         top: 40%;
+        display: flex;
+        border: 5px solid;
+        border-color: #7ef7ed;
+        border-radius: 5px;
+        background-color: rgb(218, 245, 245);
+        opacity: 90%;
       }
       .faculty-container {
-        display: inline-block;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        position: relative;
-      }
-      #validation{
-
       }
 }
+
+/*This is a class*/
+/*Rule5: We changed our pslo container's flex direction to column, gave it a background color. We did so in order to group the pslo and required courses containers together with top-down ordering.*/
+.pslo-courses-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 53em;
+    background-color: #1578b9;
+    border-radius: 10px;
+    opacity: 90%;
+  }
 
 .faculty-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+.link-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid;
+    border-color: #7ef7ed;
+    border-radius: 5px;
+    background-color: rgb(218, 245, 245);
+    opacity: 90%;
+  }
 
 .card{
   display: flex;
@@ -64,27 +85,29 @@ body{
   left: 50%;
 }
 
-.link-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
+/*This is an id*/
 #main-title {
-  color: #4dccbd;
-  font-family: 'Georgia', serif;
+  color: rgb(0, 0, 0);
   text-align: center;
   font-size: 4rem;
 }
 
 h2 {
-  font-family: 'Georgia', serif;
   text-align: center;
+  font-size: 2rem;
 }
 
 h3 {
-  font-family: 'Georgia', serif;
+  font-size: 1rem;
+}
+
+h6 {
+    font-size: 1rem;
+}
+
+/*This is grouping*/
+#main-title, h2, h3, h6 {
+    font-family: 'Georgia', serif;
 }
 
 #courses {
@@ -104,32 +127,80 @@ h3 {
   align-content: center;
 }
 
+#faculty>ul>li {
+    display: inline-block;
+    font-family: sans-serif;
+    padding: 30px;
+}
+
+/*This is nesting*/
 #link-space>ul {
   display: table;
-  font-size: 1rem;
+  font-size: .75rem;
 }
 
 .name {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'fantasy', serif;
   font-size: 2rem;
 }
 
 .office {
-  font-family: 'Georgia', sans-sans-serif;
+  font-family: 'fantasy', serif;
 }
 
 .cloud {
   font-style: oblique;
 }
 
+/*Rule 1: We used the border-radius setting of 100% to make our image borders into circles.*/
 img.pic {
     width: 100%;
     border: 4px solid #61f1e5;
     border-radius: 100%;
 }
 
-#validation {
-font-size: 80%;
-padding: 25px;
+#style ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #1577b9e1;
+    opacity: 90%;
 }
 
+#style li {
+    float: left; /*explore what happens if this is 'right' instead*/
+}
+
+#style li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px; /*this adds some spacing around the items in our "nav bar" */
+    text-decoration: none;
+}
+
+/* Change the link background color to #000 (black) on hover */
+#style li a:hover {
+    background-color: #61f1e5;
+}
+/*Rule4: We adjusted the style bar to remain at the top left of the screen so it didn't cover various elements when the window size changed.*/
+#style {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 46px;
+    border: 5px solid black;
+    border-radius: 3px;
+    opacity: 90%;
+}
+
+#validation {
+    font-size: 80%;
+    padding: 5px;
+    background-color: rgba(240, 189, 160, 0.829);
+    border: 5px solid;
+    border-radius: 5px;
+    border-color: rgba(245, 122, 106, 0.836);
+    opacity: 90%;
+}
